# notas-musicais

./: README.md  mkdocs.yml  notas-musicais  pyproject.toml
docs/: index.md
notas-musicais/: escalas.py
notas_musicais/: cli.py  escalas.py
tests/: test_cli.py  test_escalas.py
