[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["tvtavares <thayana.tavares@neoprospecta.net>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.2.3"
mkdocstrings-python = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
